<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.johnfneto.weatherapp.models.WeatherModel" />

        <import type="com.johnfneto.weatherapp.utils.Utils" />

        <import type="android.view.View" />

        <variable
            name="weatherData"
            type="com.johnfneto.weatherapp.models.WeatherModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <RelativeLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <AutoCompleteTextView
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:drawableEnd="@drawable/ic_search_white"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:padding="@dimen/text_margin"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:id="@+id/addressContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/searchText"
                android:layout_marginTop="@dimen/tile_margin"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{weatherData == null ? View.INVISIBLE : View.VISIBLE}">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/city, weatherData.name, weatherData.sys.country)}"
                    android:textSize="@dimen/text_size_city" />

                <TextView
                    android:id="@+id/updated_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_date" />

            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/recentSearchesButton"
                android:layout_below="@id/addressContainer">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/overviewContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginBottom="@dimen/tile_margin"
                        android:orientation="vertical"
                        android:visibility="@{weatherData == null ? View.INVISIBLE : View.VISIBLE}">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@{weatherData.weather[0].description}"
                            android:textSize="@dimen/text_size_description" />

                        <TextView
                            android:id="@+id/temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif-thin"
                            android:text="@{weatherData.main.formattedTemperature}"
                            android:textSize="@dimen/text_size_temperature" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_padding"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/temp_min"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/layout_padding"
                                android:text="@{weatherData.main.formattedTempMin}" />

                            <TextView
                                android:id="@+id/temp_max"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/layout_padding"
                                android:text="@{weatherData.main.formattedTempMax}" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/detailsContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/tile_margin"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/tile_margin"
                                android:layout_weight="1"
                                android:background="@color/backgroundColor"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/tile_padding">

                                <ImageView
                                    android:layout_width="@dimen/icon_size"
                                    android:layout_height="@dimen/icon_size"
                                    android:src="@drawable/sunrise"
                                    android:tint="@color/whiteColor" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/margin_top"
                                    android:text="@string/sunrise" />

                                <TextView
                                    android:id="@+id/sunrise"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{weatherData.sys.formattedSunrise}"
                                    android:textSize="@dimen/text_size_values" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/tile_margin"
                                android:layout_weight="1"
                                android:background="@color/backgroundColor"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/tile_padding">

                                <ImageView
                                    android:layout_width="@dimen/icon_size"
                                    android:layout_height="@dimen/icon_size"
                                    android:src="@drawable/sunset"
                                    android:tint="@color/whiteColor" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/margin_top"
                                    android:text="@string/sunset" />

                                <TextView
                                    android:id="@+id/sunset"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{weatherData.sys.formattedSunset}"
                                    android:textSize="@dimen/text_size_values" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/backgroundColor"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/tile_padding">

                                <ImageView
                                    android:layout_width="@dimen/icon_size"
                                    android:layout_height="@dimen/icon_size"
                                    android:src="@drawable/wind"
                                    android:tint="@color/whiteColor" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/margin_top"
                                    android:text="@string/wind_speed" />

                                <TextView
                                    android:id="@+id/wind"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{String.format(@string/wind, weatherData.wind.formattedWindSpeed)}"
                                    android:textSize="@dimen/text_size_values" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/tile_margin"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/tile_margin"
                                android:layout_weight="1"
                                android:background="@color/backgroundColor"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/tile_padding">

                                <ImageView
                                    android:layout_width="@dimen/icon_size"
                                    android:layout_height="@dimen/icon_size"
                                    android:src="@drawable/pressure"
                                    android:tint="@color/whiteColor" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/margin_top"
                                    android:text="@string/pressure_label" />

                                <TextView
                                    android:id="@+id/pressure"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{String.format(@string/pressure, weatherData.main.pressure)}"
                                    android:textSize="@dimen/text_size_values" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/tile_margin"
                                android:layout_weight="1"
                                android:background="@color/backgroundColor"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/tile_padding">

                                <ImageView
                                    android:layout_width="@dimen/icon_size"
                                    android:layout_height="@dimen/icon_size"
                                    android:src="@drawable/humidity"
                                    android:tint="@color/whiteColor" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/margin_top"
                                    android:text="@string/humidity_label" />

                                <TextView
                                    android:id="@+id/humidity"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{String.format(@string/humidity, weatherData.main.humidity)}"
                                    android:textSize="@dimen/text_size_values" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/backgroundColor"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/tile_padding">

                                <ImageView
                                    android:id="@+id/windDirection"
                                    android:layout_width="@dimen/icon_size"
                                    android:layout_height="@dimen/icon_size"
                                    android:rotation="@{weatherData.wind.windDirection}"
                                    android:src="@drawable/ic_arrow_up"
                                    android:tint="@color/whiteColor" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/margin_top"
                                    android:text="@string/wind_direction" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{weatherData.wind.formattedBearing}"
                                    android:textSize="@dimen/text_size_values" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

            <Button
                android:id="@+id/recentSearchesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/recent_searches"
                android:textAllCaps="false" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>
</layout>